# explainable-medical-coding

./: .env  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  eval_explanations.py  pyproject.toml  train_plm.py
data/splits/: mimiciv_icd10cm_splits.feather
explainable_medical_coding/config/: config.yaml  explainability.yaml  factories.py
explainable_medical_coding/data/: batch_sampler.py  dataloader.py  make_mdace_icd10_inpatient.py  make_mdace_icd10_profee.py  make_mdace_icd9_inpatient.py  make_mdace_icd9_inpatient_code.py  make_mdace_icd9_inpatient_evidence_only.py  make_mimiciii_50.py  make_mimiciii_clean.py  make_mimiciii_full.py  make_mimiciv_icd10.py  make_mimiciv_icd10cm.py  make_mimiciv_icd9.py  make_split.py  prepare_mdace.py  prepare_mimiciii.py  prepare_mimiciv.py
explainable_medical_coding/datasets/: mdace_inpatient_icd10.py  mdace_inpatient_icd9.py  mdace_inpatient_icd9_code.py  mdace_inpatient_icd9_evidence_only.py  mdace_profee_icd10.py  mimiciii_50.py  mimiciii_clean.py  mimiciii_full.py  mimiciv_icd10.py  mimiciv_icd9.py
explainable_medical_coding/eval/: faithfulness_metrics.py  metrics.py  plausibility_metrics.py  sparsity_metrics.py
explainable_medical_coding/explainability/: explanation_methods.py  helper_functions.py
explainable_medical_coding/models/: models.py
explainable_medical_coding/trainer/: callbacks.py  trainer.py
explainable_medical_coding/utils/: analysis.py  data_helper_functions.py  datatypes.py  decision_boundary.py  loaders.py  lookups.py  loss_functions.py  seed.py  settings.py  tensor.py  tokenizer.py  (+1 more)
(+254 files in other folders)
